[package]
name = "termdraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.25.0", features = ["event-stream"]}
futures = "0.3.25"
futures-timer = "3.0.2"
rand = "0.8.5"
tokio = {version ="1.24.1", features=["full"]}
